--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ cursor_shape beam
 cursor_blink_interval 0
 
 disable_ligatures always
-font_size        13
-font_family      Iosevka Medium
+font_size        12
+font_family      Iosevka
 bold_font        Iosevka Bold
-italic_font      Iosevka Medium Italic
+italic_font      Iosevka Italic
 bold_italic_font Iosevka Bold Italic
 
 allow_remote_control true
