--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ nvim/.config/nvim/spell/en.utf-8.add.spl
 nvim/.config/nvim/spell/en.utf-8.spl
 nvim/.config/nvim/spell/en.utf-8.sug
 vim/.vim/autoload/pathogen.vim
+vim/.vim/plugged/
 
 fonts/.local/share/fonts/*/.uuid
 fonts/.local/share/fonts/.uuid
