--- a/kitty/.config/kitty/weatherwax.conf
+++ b/kitty/.config/kitty/weatherwax.conf
@@ -1,9 +1,8 @@
 foreground            #F0F0F0
-background            #2E3440
+background            #100E23
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
-#cursor                #81A1C1
 cursor                #D8DEE9
 
 # black
@@ -11,28 +10,28 @@ color0   #3B4252
 color8   #4C566A
 
 # red
-color1   #DE6954
-color9   #DE6954
+color1   #FF8080
+color9   #FF8080
 
 # green
-color2   #80D3A4
-color10  #80D3A4
+color2   #82D9A9
+color10  #82D9A9
 
 # yellow
-color3   #D3CB80
-color11  #D3CB80
+color3   #E9E58A
+color11  #E9E58A
 
 # blue
-color4  #72A1BC
-color12 #72A1BC
+color4   #5CC9E8
+color12  #5CC9E8
 
 # magenta
-color5   #B48EAD
-color13  #B48EAD
+color5   #C991E1
+color13  #C991E1
 
 # cyan
-color6   #81DAE7
-color14  #81DAE7
+color6   #5CC9E8
+color14  #5CC9E8
 
 # white
 color7   #F0F0F0
