I change so many things at once, I can't even begin to imagine what a commit message could look like

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,4 @@
-include gruvbox_dark.conf
-
+include tokyonight.conf
 
 shell fish
 
@@ -15,3 +14,4 @@ bold_italic_font Iosevka Bold Italic
 
 allow_remote_control true
 
+map F5 launch --location=hsplit
