--- a/kitty/.config/kitty/weatherwax.conf
+++ b/kitty/.config/kitty/weatherwax.conf
@@ -1,38 +1,38 @@
-foreground            #F0F0F0
-background            #100E23
+foreground            #D9D9D9
+background            #242528
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
 cursor                #D8DEE9
 
 # black
-color0   #3B4252
-color8   #4C566A
+color0   #242528
+color8   #242528
 
 # red
-color1   #FF8080
-color9   #FF8080
+color1   #C2708B
+color9   #C2708B
 
 # green
-color2   #82D9A9
-color10  #82D9A9
+color2   #70C299
+color10  #70C299
 
 # yellow
-color3   #E9E58A
-color11  #E9E58A
+color3   #BDC270
+color11  #BDC270
 
 # blue
-color4   #5CC9E8
-color12  #5CC9E8
+color4   #7099C2
+color12  #7099C2
 
 # magenta
-color5   #C991E1
-color13  #C991E1
+color5   #a770c2
+color13  #a770c2
 
 # cyan
-color6   #5CC9E8
-color14  #5CC9E8
+color6   #70c2bb
+color14  #70c2bb
 
 # white
-color7   #F0F0F0
-color15  #F0F0F0
+color7   #D9D9D9
+color15  #D9D9D9
