git: update config

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,11 +1,11 @@
-# SPDX-FileCopyrightText: 2019 Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
+# SPDX-FileCopyrightText: 2019 Hristo Filaretov <hello@hgf.sh>
 # SPDX-License-Identifier: MIT
 [user]
 	name = Hristo Filaretov
-	email = h.filaretov@campus.tu-berlin.de
+	email = hello@hgf.sh
 
 [init]
-  templateDir = ~/.git-template/
+	templateDir = ~/.git-template/
 
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
