--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -13,6 +13,9 @@ format = """\
     $docker_context\
     $dotnet\
     $conda\
+    $python\
+    $rust\
+    $package\
     $env_var\
     $line_break\
     $jobs\
@@ -29,6 +32,13 @@ success_symbol = "[;](blue)"
 error_symbol = "[;](green)"
 
 [python]
+symbol = ""
+detect_files = ["Pipfile", "__init__.py", "pyproject.toml", "requirements.txt", "setup.py", "tox.ini"]
+
+[rust]
+symbol = ""
+
+[package]
 symbol = ""
 
 [conda]
