--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ cursor_blink_interval 0
 
 disable_ligatures always
 font_size        14
-font_family      Iosevka
-bold_font        Iosevka Bold
-italic_font      Iosevka Italic
-bold_italic_font Iosevka Bold Italic
+font_family      Iosevka Term
+bold_font        Iosevka Term Bold
+italic_font      Iosevka Term Italic
+bold_italic_font Iosevka Term Bold Italic
 
 allow_remote_control true
 
