--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,15 +2,12 @@ include nord.conf
 
 shell nu
 
+disable_ligatures always
 cursor_shape beam
 cursor_blink_interval 0
 
-disable_ligatures always
-font_size        14
-font_family      Iosevka Term
-bold_font        Iosevka Term Bold
-italic_font      Iosevka Term Italic
-bold_italic_font Iosevka Term Bold Italic
+font_size        13
+font_family      Iosevka
 
 allow_remote_control true
 
