--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,14 @@
-include nord.conf
+include gruvbox_dark.conf
 
 disable_ligatures always
 cursor_shape beam
 cursor_blink_interval 0
 
-font_size        13
-font_family      Iosevka
+font_size        14
+font_family      Berkeley Mono
 
 allow_remote_control true
+
+shell /opt/homebrew/bin/nu
 
 map F5 launch --location=hsplit
