--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,13 @@
 include gruvbox_dark.conf
 
-disable_ligatures always
+disable_ligatures never
 cursor_shape beam
 cursor_blink_interval 0
 
-font_size        14
-font_family      Berkeley Mono
+macos_option_as_alt yes
+
+font_size        13
+font_family      JetBrains Mono
 
 allow_remote_control true
 
