emacs and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,1 @@
-# SPDX-FileCopyrightText: 2019 Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
-# SPDX-License-Identifier: MIT
-#
-bin/.local/bin/
-nvim/.config/nvim/sessions/
-nvim/.config/nvim/pack/
-vim/.vim/tmp/
-zsh/.zsh/.zsh_history
-fishd.*
-**/.zcompdump
-local.fish
-**/.netrwhist
-
-emacs/.emacs.d/elpa/
-emacs/.emacs.d/auto-save-list/
-emacs/.emacs.d/eshell/
-emacs/.emacs.d/url/
-emacs/.emacs.d/ido.last
-emacs/.emacs.d/configuration.el
-emacs/.emacs.d/tramp
-emacs/.emacs.d/custom.el
-emacs/.emacs.d/session*
-emacs/.emacs.d/recentf
-emacs/.emacs.d/auctex-auto/
-emacs/.emacs.d/quelpa/
-emacs/.emacs.d/request/
-emacs/.emacs.d/transient/
-emacs/.emacs.d/smex-items
-emacs/.emacs.d/.python-environments/
-emacs/.emacs.d/.lsp-session-v1
-emacs/.emacs.d/projectile-bookmarks.eld
-
-fish/.config/fish/fish_variables
-fish/.config/fish/functions/
-nvim/.config/nvim/settings.json
-nvim/.config/nvim/spell/de.utf-8.add
-nvim/.config/nvim/spell/de.utf-8.add.spl
-nvim/.config/nvim/spell/de.utf-8.spl
-nvim/.config/nvim/spell/en.utf-8.add
-nvim/.config/nvim/spell/en.utf-8.add.spl
-nvim/.config/nvim/spell/en.utf-8.spl
-nvim/.config/nvim/spell/en.utf-8.sug
-vim/.vim/autoload/pathogen.vim
-vim/.vim/plugged/
-
-fonts/.local/share/fonts/*/.uuid
-fonts/.local/share/fonts/.uuid
-/emacs/.emacs.d/.org-id-locations
-/emacs/.emacs.d/calc.el
-/emacs/.emacs.d/projects
-/emacs/.emacs.d/eln-cache/
-/emacs/.emacs.d/games
+emacs/*
