--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,17 +3,23 @@ include gruvbox_dark.conf
 disable_ligatures always
 cursor_shape beam
 cursor_blink_interval 0
-input_delay 1
+input_delay 0
 
 macos_option_as_alt yes
 
-font_size        14
 
 allow_remote_control true
 
 shell /Users/hgf/.cargo/bin/nu
 
 map F5 launch --location=hsplit
+# Unmap
+map super+,
+map super+r
+
+# Font stuff
+font_size 15
+text_composition_strategy legacy
 
 # BEGIN_KITTY_FONTS
 font_family      family="Iosevka Term"
@@ -21,3 +27,9 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
+
+
+# BEGIN_KITTY_THEME
+# Nord
+include current-theme.conf
+# END_KITTY_THEME
